--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "scrape_fitness_hr",
+  "name": "thefitness-scraper",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env scrape.js",
+    "start": "node scrape.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
     "puppeteer": "^24.2.0"
   }
