--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.744.0",
     "axios": "^1.7.9",
+    "cronitor": "^2.5.1",
     "dotenv": "^16.4.7",
     "node-cron": "^3.0.3",
     "puppeteer": "^24.2.0"
